--- a/index.html
+++ b/index.html
@@ -1,177 +1,223 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Only Hands Elite | Basketball Club</title>
+    <title>IA Info - Tout sur l'Intelligence Artificielle</title>
     <style>
-        body {
+        * {
             margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
             font-family: 'Arial', sans-serif;
-            background-color: #ffffff;
-            color: #1a1a1a;
+            line-height: 1.6;
+            color: #333;
+            background: linear-gradient(135deg, #0c0c0c 0%, #1a1a2e 50%, #16213e 100%);
+            overflow-x: hidden;
         }
-
         header {
-            background-color: #0055ff;
-            color: white;
-            text-align: center;
+            background: rgba(0,0,0,0.8);
             padding: 1rem 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            backdrop-filter: blur(10px);
         }
-
-        .logo-section {
-            background-color: #ffffff;
-            text-align: center;
-            padding: 2rem 1rem;
-            border-bottom: 3px solid #0055ff;
-        }
-
-        .logo-section svg {
-            width: 200px;
-            height: 200px;
-        }
-
         nav {
-            background-color: #003bb3;
             display: flex;
-            justify-content: center;
-            gap: 2rem;
-            padding: 1rem 0;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
         }
-
-        nav a {
+        .logo {
+            font-size: 1.8rem;
+            color: #00ff88;
+            text-decoration: none;
+        }
+        .nav-links {
+            display: flex;
+            list-style: none;
+        }
+        .nav-links a {
             color: white;
             text-decoration: none;
-            font-weight: bold;
+            margin-left: 2rem;
+            transition: color 0.3s;
         }
-
-        nav a:hover {
-            text-decoration: underline;
+        .nav-links a:hover {
+            color: #ff00ff;
         }
-
         .hero {
-            background: linear-gradient(rgba(0, 85, 255, 0.8), rgba(0, 85, 255, 0.8)),
-                        url('basketball-court.jpg') center/cover no-repeat;
-            color: white;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
-            padding: 6rem 1rem;
+            padding: 0 2rem;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><radialGradient id="g" cx="50%" cy="50%"><stop offset="0%" stop-color="%2300ff88"/><stop offset="50%" stop-color="%23ff0080"/><stop offset="100%" stop-color="%2300ffff"/></radialGradient></defs><rect width="100%" height="100%" fill="url(%23g)"/><circle cx="200" cy="200" r="50" fill="%23fff" opacity="0.3"/><circle cx="800" cy="800" r="30" fill="%23ff0" opacity="0.4"/></svg>') center/cover;
+            color: white;
         }
-
         .hero h1 {
-            font-size: 3rem;
+            font-size: 4rem;
             margin-bottom: 1rem;
+            background: linear-gradient(45deg, #00ff88, #ff00ff, #00ffff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: glow 2s ease-in-out infinite alternate;
         }
-
-        .section {
-            padding: 4rem 2rem;
-            max-width: 1000px;
+        @keyframes glow {
+            from { text-shadow: 0 0 20px #00ff88; }
+            to { text-shadow: 0 0 30px #ff00ff; }
+        }
+        .btn {
+            display: inline-block;
+            padding: 1rem 2rem;
+            margin: 1rem;
+            background: linear-gradient(45deg, #ff0080, #00ff88, #0080ff, #ff8000);
+            background-size: 300% 300%;
+            color: white;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: all 0.5s;
+            position: relative;
+            overflow: hidden;
+            animation: rainbow 3s ease infinite;
+        }
+        @keyframes rainbow {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+        .btn:hover {
+            transform: translateY(-10px) scale(1.05);
+            box-shadow: 0 20px 40px rgba(255,0,128,0.6), 0 0 50px rgba(0,255,136,0.5);
+            animation: none;
+            background: linear-gradient(45deg, #ff00ff, #00ffff);
+        }
+        .btn::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.4), transparent);
+            transition: left 0.5s;
+        }
+        .btn:hover::before {
+            left: 100%;
+        }
+        section {
+            padding: 5rem 2rem;
+            max-width: 1200px;
             margin: 0 auto;
         }
-
-        .section h2 {
-            color: #0055ff;
+        h2 {
+            font-size: 3rem;
             text-align: center;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
+            background: linear-gradient(45deg, #00ff88, #ff00ff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
-
-        .roster {
+        .features {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2rem;
+        }
+        .feature {
+            background: rgba(255,255,255,0.1);
+            padding: 2rem;
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255,255,255,0.2);
             text-align: center;
+            transition: transform 0.3s;
         }
-
-        .player-card {
-            background-color: #f4f8ff;
-            border-radius: 8px;
-            padding: 1rem;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        .feature:hover {
+            transform: translateY(-10px);
         }
-
         footer {
-            background-color: #0055ff;
-            color: white;
             text-align: center;
-            padding: 1.5rem;
+            padding: 2rem;
+            color: #aaa;
+            background: rgba(0,0,0,0.5);
         }
-
-        /* Responsive */
-        @media (max-width: 600px) {
-            .hero h1 { font-size: 2rem; }
-            .logo-section svg { width: 150px; height: 150px; }
+        @media (max-width: 768px) {
+            .hero h1 { font-size: 2.5rem; }
+            .nav-links { display: none; }
+            .features { grid-template-columns: 1fr; }
         }
     </style>
 </head>
 <body>
-
     <header>
-        <h1>Only Hands Elite</h1>
-        <p>Basketball Club | Est. 2025</p>
+        <nav>
+            <a href="#" class="logo">IA Info</a>
+            <ul class="nav-links">
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="#fonctionnement">Fonctionnement</a></li>
+                <li><a href="#avantages">Avantages</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <!-- Team Logo Section -->
-    <section class="logo-section">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-            <!-- Basketball -->
-            <circle cx="100" cy="100" r="85" fill="#0055ff" stroke="#ffffff" stroke-width="8"/>
-            <!-- Lines -->
-            <path d="M 100 15 Q 115 50 100 85 Q 85 120 100 155 M 15 100 Q 50 115 85 100 Q 120 85 155 100" 
-                  stroke="#ffffff" stroke-width="6" stroke-linecap="round" fill="none"/>
-            <!-- Text Arc -->
-            <path id="textArc" d="M 50,100 A 50,50 0 1 1 150,100 A 50,50 0 0 1 50,100" fill="none"/>
-            <text font-family="Arial, sans-serif" font-size="18" font-weight="bold" fill="#ffffff">
-                <textPath href="#textArc" startOffset="25%">ONLY HANDS ELITE</textPath>
-            </text>
-        </svg>
-        <p style="color: #0055ff; font-weight: bold; margin-top: 1rem;">Est. 2025</p>
+    <section id="accueil" class="hero">
+        <h1>Bienvenue sur IA Info</h1>
+        <p>Découvrez l'univers de l'Intelligence Artificielle : innovations, applications et avenir.</p>
+        <a href="#fonctionnement" class="btn">Explorer l'IA</a>
+        <a href="#contact" class="btn">Commencer</a>
     </section>
 
-    <nav>
-        <a href="#about">About</a>
-        <a href="#roster">Roster</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <section class="hero">
-        <h1>Welcome to Only Hands Elite</h1>
-        <p>Where skill meets teamwork. Join the next generation of basketball greatness.</p>
-    </section>
-
-    <section id="about" class="section">
-        <h2>About the Team</h2>
-        <p>Founded in 2025, Only Hands Elite is a competitive basketball club dedicated to developing elite players on and off the court. Our mission is to combine athletic excellence with community leadership.</p>
-    </section>
-
-    <section id="roster" class="section">
-        <h2>Team Roster</h2>
-        <div class="roster">
-            <div class="player-card">
-                <h3>John "Buckets" Davis</h3>
-                <p>Position: Point Guard</p>
-                <p>#1</p>
+    <section id="fonctionnement">
+        <h2>Comment fonctionne l'IA ?</h2>
+        <div class="features">
+            <div class="feature">
+                <h3>Apprentissage Automatique</h3>
+                <p>L'IA apprend des données pour prédire et décider, comme un cerveau numérique.</p>
             </div>
-            <div class="player-card">
-                <h3>Marcus Hill</h3>
-                <p>Position: Shooting Guard</p>
-                <p>#13</p>
+            <div class="feature">
+                <h3>Réseaux Neuronaux</h3>
+                <p>Inspirés du cerveau humain, ils traitent des informations complexes en couches.</p>
             </div>
-            <div class="player-card">
-                <h3>Leo Carter</h3>
-                <p>Position: Center</p>
-                <p>#23</p>
+            <div class="feature">
+                <h3>Deep Learning</h3>
+                <p>Des algorithmes profonds qui excellent en reconnaissance d'images et de langage.</p>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="section">
-        <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:info@onlyhandselite.com">info@onlyhandselite.com</a></p>
-        <p>Follow us for updates and tryout info!</p>
+    <section id="avantages">
+        <h2>Avantages de l'IA</h2>
+        <div class="features">
+            <div class="feature">
+                <h3>Efficacité</h3>
+                <p>Automatise les tâches répétitives, libérant du temps pour l'innovation.</p>
+            </div>
+            <div class="feature">
+                <h3>Précision</h3>
+                <p>Réduit les erreurs humaines dans la médecine, la finance et plus.</p>
+            </div>
+            <div class="feature">
+                <h3>Innovation</h3>
+                <p>Ouvre des portes à des technologies comme les voitures autonomes.</p>
+            </div>
+        </div>
+        <div style="text-align: center; margin-top: 3rem;">
+            <a href="#" class="btn">En Savoir Plus</a>
+        </div>
     </section>
 
-    <footer>
-        <p>© 2026 Only Hands Elite Basketball Club. All rights reserved.</p>
+    <footer id="contact">
+        <p>&copy; 2026 IA Info. Tous droits réservés. | Contact : info@iainfo.fr</p>
     </footer>
-
 </body>
 </html>
