--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
-            color: #333;
+            color: #fff;
             background: linear-gradient(135deg, #0c0c0c 0%, #1a1a2e 50%, #16213e 100%);
             overflow-x: hidden;
         }
@@ -140,6 +140,14 @@
             border: 1px solid rgba(255,255,255,0.2);
             text-align: center;
             transition: transform 0.3s;
+            color: #ffffff; /* texte bien blanc dans les petites cases */
+        }
+        .feature h3 {
+            margin-bottom: 0.5rem;
+            color: #ffffff;
+        }
+        .feature p {
+            color: #ffffff;
         }
         .feature:hover {
             transform: translateY(-10px);
